[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyBitTorrent"
version = "0.1.0"
authors = [
  { name="Geffner", email="gefen102@gmail.com" },
]
description = "Download torrent files according to BitTorrent specifications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gaffner/PyBitTorrent"
"Bug Tracker" = "https://github.com/gaffner/PyBitTorrent/issues"